# factorypatter

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test_example  test_example.cpp
